--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,1 @@
-<link rel="icon" type="image/png" href="/assets/images/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg" />
-<link rel="shortcut icon" type="image/ico" href="/assets/images/favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
-<link rel="manifest" href="/assets/images/site.webmanifest" />
+<link rel= "shortcut icon" type="image/png" href="/assets/images/favicon_800x800.png" />
