--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,1 +1,1 @@
-<link rel="shortcut icon" type="image/png" href="/Favicon_small.png" />
+<link rel="shortcut icon" type="image/png" href="/Favicon_small.png">
